<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/email_sender_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_sender_text_description"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/email_sender_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/email_sender_message_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms_sender_destination_description"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/email_address_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/send_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/send_email_button_text"
        />

</LinearLayout>